Adding missing "amount" field

--- a/includes/specials/templates/donationForm.mustache
+++ b/includes/specials/templates/donationForm.mustache
@@ -1,6 +1,9 @@
 <div id="cardwindow">
 	<form class="ElementsApp" id="payment_form">
 		<div class="CardField-input-wrapper">
+			<label for="amount">סכום</label><input value="50" name="amount" id="amount">
+		</div>
+		<div class="CardField-input-wrapper">
 			<div id="card-img" aria-hidden="true"></div>
 			<span class="CardField-child">
 				<span id="credit_card_number" class="InputContainer"></span>
