Fix dynamic changing of amount shown on submit button

--- a/includes/specials/templates/donationForm.mustache
+++ b/includes/specials/templates/donationForm.mustache
@@ -57,7 +57,7 @@
 		<div>
 			<button type="submit" disabled="" class="btn btn-secondary">
 				<span class="btn-text">לתרומת
-					<span dir="ltr" class="sum"><span class="currency">{{currency}}</span><span class="number">{{sum}}</span></span>
+					<span class="btn-amount-wrapper"><span class="currency-sign">{{currency}}</span><span class="btn-amount">{{sum}}</span></span>
 				</span>
 			</button>
 		</div>
