Make 191 the defualt sum

--- a/includes/specials/templates/donationForm.mustache
+++ b/includes/specials/templates/donationForm.mustache
@@ -8,7 +8,7 @@
 					<label class="box-label" for="donation_suggested_amount_1"><span class="box-item mc_el usd  len-2"><span class="currency-sign">₪</span><span class="box-amount mc_amount symbol_first">50</span></span></label>
 				</div>
 				<div class="suggested-amount-box">
-					<input class="box-input suggested-amount mc_input" id="donation_suggested_amount_2" type="radio" value="191" name="suggested_amount">
+					<input class="box-input suggested-amount mc_input" id="donation_suggested_amount_2" type="radio" checked value="191" name="suggested_amount">
 					<label class="box-label" for="donation_suggested_amount_2"><span class="box-item mc_el usd  len-2"><span class="currency-sign">₪</span><span class="box-amount mc_amount symbol_first">191</span></span></label>
 				</div>
 				<div class="suggested-amount-box">
