--- a/includes/specials/templates/donationForm.mustache
+++ b/includes/specials/templates/donationForm.mustache
@@ -4,11 +4,11 @@
 		<div class="d-input-group">
 			<div class="suggested-amount-boxes">
 				<div class="suggested-amount-box">
-					<input class="box-input suggested-amount mc_input" id="donation_suggested_amount_1" type="radio" value="50" name="suggested_amount">
+					<input class="box-input suggested-amount mc_input" id="donation_suggested_amount_1" type="radio" value="100" name="suggested_amount">
 					<label class="box-label" for="donation_suggested_amount_1"><span class="box-item mc_el usd  len-2"><span class="currency-sign">₪</span><span class="box-amount mc_amount symbol_first">50</span></span></label>
 				</div>
 				<div class="suggested-amount-box">
-					<input class="box-input suggested-amount mc_input" id="donation_suggested_amount_2" type="radio" checked value="191" name="suggested_amount">
+					<input class="box-input suggested-amount mc_input" id="donation_suggested_amount_2" type="radio" checked value="200" name="suggested_amount">
 					<label class="box-label" for="donation_suggested_amount_2"><span class="box-item mc_el usd  len-2"><span class="currency-sign">₪</span><span class="box-amount mc_amount symbol_first">191</span></span></label>
 				</div>
 				<div class="suggested-amount-box">
@@ -23,7 +23,7 @@
 			<span class="currency">₪</span>
 		</div>
 		<div class="d-input-group">
-			<label class="label-tiny" for=credit_card_number">מס' אשראי</label>
+			<label class="label-tiny" for=credit_card_number">מס' כרטיס אשראי</label>
 			<div class="CardField-child">
 				<div id="card-img" aria-hidden="true"></div>
 				<span id="credit_card_number" class="InputContainer"></span>
@@ -46,7 +46,7 @@
 			</span>
 		</div>
 		<div class="d-input-group">
-			<label class="label-tiny" for="email">דוא"ל</label>
+			<label class="label-tiny" for="email">דואר אלקטרוני</label>
 			<input type="email" id="email" name="email" placeholder="name@example.com" class="InputContainer">
 		</div>
 		<div class="d-input-group">
