--- a/modules/templates/donationForm.mustache
+++ b/modules/templates/donationForm.mustache
@@ -1,5 +1,6 @@
 <div class="donation-form-wrapper">
-	<form class="donation-form">
+	<i class="donation-loading fa fa-4x fa-spinner fa-spin"><span class="sr-only">בטעינה</span></i>
+	<form class="donation-form disabled">
 		<ul class="Card-Errors"></ul>
 		<div class="d-input-group">
 			<div class="suggested-amount-boxes">
