--- a/modules/templates/donationForm.mustache
+++ b/modules/templates/donationForm.mustache
@@ -47,8 +47,12 @@
 			</span>
 		</div>
 		<div class="d-input-group">
+			<label class="label-tiny" for="name">{{donation-cc-holder-name}}</label>
+			<input type="text" id="name" name="name" required minlength="2" class="InputContainer">
+		</div>
+		<div class="d-input-group">
 			<label class="label-tiny" for="email">{{donation-email}}</label>
-			<input type="email" id="email" name="email" placeholder="name@example.com" class="InputContainer">
+			<input type="email" id="email" name="email" required placeholder="name@example.com" class="InputContainer">
 		</div>
 		<div class="d-input-group">
 			<label for="subscribe">
