--- a/modules/templates/donationForm.mustache
+++ b/modules/templates/donationForm.mustache
@@ -6,15 +6,15 @@
 			<div class="suggested-amount-boxes">
 				<div class="suggested-amount-box">
 					<input class="box-input suggested-amount mc_input" id="donation_suggested_amount_1" type="radio" value="360" name="suggested_amount">
-					<label class="box-label" for="donation_suggested_amount_1"><span class="box-item mc_el usd  len-2"><span class="currency-sign">{{currency}}</span><span class="box-amount mc_amount symbol_first">360</span></span></label>
+					<label class="box-label" for="donation_suggested_amount_1"><span class="currency-sign">{{currency}}</span><span class="box-amount mc_amount symbol_first">360</span></label>
 				</div>
 				<div class="suggested-amount-box">
 					<input class="box-input suggested-amount mc_input" id="donation_suggested_amount_2" type="radio" checked value="200" name="suggested_amount">
-					<label class="box-label" for="donation_suggested_amount_2"><span class="box-item mc_el usd  len-2"><span class="currency-sign">{{currency}}</span><span class="box-amount mc_amount symbol_first">200</span></span></label>
+					<label class="box-label" for="donation_suggested_amount_2"><span class="currency-sign">{{currency}}</span><span class="box-amount mc_amount symbol_first">200</span></label>
 				</div>
 				<div class="suggested-amount-box">
 					<input class="box-input suggested-amount mc_input" id="donation_suggested_amount_3" type="radio" value="100" name="suggested_amount">
-					<label class="box-label" for="donation_suggested_amount_3"><span class="box-item mc_el usd  len-3"><span class="currency-sign">{{currency}}</span><span class="box-amount mc_amount symbol_first">100</span></span></label>
+					<label class="box-label" for="donation_suggested_amount_3"><span class="currency-sign">{{currency}}</span><span class="box-amount mc_amount symbol_first">100</span></label>
 				</div>
 			</div>
 		</div>
@@ -47,11 +47,11 @@
 			</span>
 		</div>
 		<div class="d-input-group">
-			<label class="label-tiny" for="name">{{donation-cc-holder-name}}</label>
+			<label class="label-tiny" for="name">{{donation-cc-holder-name}}<span class="required-indicator" aria-label="{{donation-required-indicator}}"></span></label>
 			<input type="text" id="name" name="name" required minlength="2" class="InputContainer">
 		</div>
 		<div class="d-input-group">
-			<label class="label-tiny" for="email">{{donation-email}}</label>
+			<label class="label-tiny" for="email">{{donation-email}}<span class="required-indicator" aria-label="{{donation-required-indicator}}"></span></label>
 			<input type="email" id="email" name="email" required placeholder="name@example.com" class="InputContainer">
 		</div>
 		<div class="d-input-group">
