Improve the loading message display

--- a/modules/ext.donation.form.less
+++ b/modules/ext.donation.form.less
@@ -16,10 +16,14 @@
 }
 
 .donation-loading {
-	position: absolute;
-	top: 20%;
-	left: 20%;
+	// Act like a backdrop
 	z-index: 1;
+	background-color: #fff;
+	opacity: 0.9;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	text-align: center;
 }
 
 .donation-form {
