--- a/modules/templates/donationForm.mustache
+++ b/modules/templates/donationForm.mustache
@@ -1,5 +1,8 @@
 <div class="donation-form-wrapper">
-	<i class="donation-loading fa fa-4x fa-spinner fa-spin"><span class="sr-only">בטעינה</span></i>
+	<div class="donation-loading">
+		<div class="text">{{donation-loading}}</div>
+		<i class="fa fa-4x fa-spinner fa-spin"></i>
+	</div>
 	<form class="donation-form disabled">
 		<ul class="Card-Errors"></ul>
 		<div class="d-input-group">
