Add a tooltip to explain the CVV field

--- a/modules/templates/donationForm.mustache
+++ b/modules/templates/donationForm.mustache
@@ -40,7 +40,7 @@
 			</span>
 
 			<span class="CardField-child">
-				<label class="label-tiny" for="cvv">{{donation-cc-cvv}}</label>
+				<label class="label-tiny" for="cvv">{{donation-cc-cvv}} <i class="fa fa-question-circle-o" title="{{donation-cc-cvv-tooltip}}"></i></label>
 				<span id="cvv" class="InputContainer"></span>
 			</span>
 
