Make the amount field into a "number" type
This works much nicer on mobile.

--- a/modules/templates/donationForm.mustache
+++ b/modules/templates/donationForm.mustache
@@ -23,7 +23,7 @@
 		</div>
 		<div class="d-input-group">
 			<label class="label-tiny sr-only" for="amount">{{donation-amount-other}}</label>
-			<input name="amount" id="amount" class="InputContainer" autocomplete="off" placeholder="{{donation-amount-other}}">
+			<input name="amount" type="number" id="amount" class="InputContainer" autocomplete="off" placeholder="{{donation-amount-other}}">
 			<span class="currency">₪</span>
 		</div>
 		<div class="d-input-group">
