Make the submit button 100% width

--- a/modules/templates/donationForm.mustache
+++ b/modules/templates/donationForm.mustache
@@ -63,7 +63,7 @@
 			</label>
 		</div>
 		<div>
-			<button type="submit" disabled="" class="btn btn-secondary">
+			<button type="submit" disabled="" class="btn btn-secondary btn-submit">
 				<span class="btn-text">{{{donation-btn-text}}}</span>
 			</button>
 		</div>
