Add a lovely, soothing "this form is so secure!" message

--- a/modules/ext.donation.form.less
+++ b/modules/ext.donation.form.less
@@ -209,3 +209,9 @@ label > i:hover:after {
 	/* @noflip */
 	direction: ltr;
 }
+
+.donation-security-soothing {
+	font-size: 70%;
+	margin-top: 5px;
+	text-align: center;
+}
