Make all labels semi-bold (not just the tiny ones)

--- a/modules/ext.donation.form.less
+++ b/modules/ext.donation.form.less
@@ -37,6 +37,10 @@
 	.btn-submit {
 		width: 100%;
 	}
+
+	label {
+		font-weight: 600;
+	}
 }
 
 .d-input-group {
@@ -47,7 +51,6 @@
 
 label.label-tiny {
 	font-size: 70%;
-	font-weight: 600;
 	display: block;
 	margin-bottom: 0;
 }
