--- a/modules/templates/donationForm.mustache
+++ b/modules/templates/donationForm.mustache
@@ -63,6 +63,6 @@
 				<span class="btn-text">{{{donation-btn-text}}}</span>
 			</button>
 		</div>
-		<div class="donation-security-soothing">{{donation-security-soothing}}</div>
+		<div class="donation-security-soothing">{{{donation-security-soothing}}}</div>
 	</form>
 </div>
