Add a subtitle to the modal header

--- a/modules/ext.donation.modal.less
+++ b/modules/ext.donation.modal.less
@@ -1,13 +1,14 @@
-.donationModal .modal-header {
-	padding-top: 5px;
-	padding-bottom: 5px;
-}
+.donationModal {
+	.modal-title > h4 {
+		white-space: nowrap;
+	}
 
-.donationModal .donation-form-wrapper {
-	width: min-content;
-	margin: auto;
-}
+	.donation-form-wrapper {
+		width: min-content;
+		margin: auto;
+	}
 
-.donationModal a {
-	text-decoration: underline;
+	a {
+		text-decoration: underline;
+	}
 }
