--- a/modules/templates/donationForm.mustache
+++ b/modules/templates/donationForm.mustache
@@ -16,12 +16,12 @@
 			</div>
 		</div>
 		<div class="d-input-group">
-			<label class="label-tiny sr-only" for="amount">{{donation-amount-other}}</label>
+			<label class="sr-only" for="amount">{{donation-amount-other}}</label>
 			<input name="amount" type="number" id="amount" min="{{minimumAmount}}" {{#maximumAmount}}max="{{maximumAmount}}"{{/maximumAmount}} class="InputContainer" autocomplete="off" placeholder="{{donation-amount-other}}">
 			<span class="currency">₪</span>
 		</div>
 		<div class="d-input-group">
-			<label class="label-tiny" for=credit_card_number">{{donation-cc-number}}</label>
+			<label for=credit_card_number">{{donation-cc-number}}</label>
 			<div class="CardField-child">
 				<div id="card-img" aria-hidden="true"></div>
 				<span id="credit_card_number" class="InputContainer"></span>
@@ -29,26 +29,26 @@
 		</div>
 		<div class="d-input-group">
 			<span class="CardField-child">
-				<label class="label-tiny" for="expiry">{{donation-cc-expiry-date}}</label>
+				<label for="expiry">{{donation-cc-expiry-date}}</label>
 				<span id="expiry" class="InputContainer"></span>
 			</span>
 
 			<span class="CardField-child">
-				<label class="label-tiny" for="cvv">{{donation-cc-cvv}} <i class="fa fa-question-circle-o" title="{{donation-cc-cvv-tooltip}}"></i></label>
+				<label for="cvv">{{donation-cc-cvv}} <i class="fa fa-question-circle-o" title="{{donation-cc-cvv-tooltip}}"></i></label>
 				<span id="cvv" class="InputContainer"></span>
 			</span>
 
 			<span class="CardField-child">
-				<label class="label-tiny" for="card_holder_id_number">{{donation-cc-holder-id}}</label>
+				<label for="card_holder_id_number">{{donation-cc-holder-id}}</label>
 				<span id="card_holder_id_number" class="InputContainer"></span>
 			</span>
 		</div>
 		<div class="d-input-group">
-			<label class="label-tiny" for="name">{{donation-cc-holder-name}}<span class="required-indicator" aria-label="{{donation-required-indicator}}"></span></label>
+			<label for="name">{{donation-cc-holder-name}}<span class="required-indicator" aria-label="{{donation-required-indicator}}"></span></label>
 			<input type="text" id="name" name="name" required minlength="2" class="InputContainer">
 		</div>
 		<div class="d-input-group">
-			<label class="label-tiny" for="email">{{donation-email}}<span class="required-indicator" aria-label="{{donation-required-indicator}}"></span></label>
+			<label for="email">{{donation-email}}<span class="required-indicator" aria-label="{{donation-required-indicator}}"></span></label>
 			<input type="email" id="email" name="email" required placeholder="name@example.com" class="InputContainer">
 		</div>
 		{{#newsletterSubscriptionEnabled}}
